--- a/pareidolia-desktop/package.json
+++ b/pareidolia-desktop/package.json
@@ -32,6 +32,7 @@
     "vite": "^5.4.21"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "python-shell": "^5.0.0"
   }
 }
